move properties to boostratp. remove unnecessary dependencies

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,11 @@
-spring.cloud.config.client:
-  oauth2:
-    client-id: p-config-server-30607a4f-abbb-4c88-a210-09e656b32850
-    client-secret: ib5lqJIQSqiS
-    access-token-uri: https://p-spring-cloud-services.uaa.run.pivotal.io/oauth/token
+#spring.cloud.config.client:
+#  oauth2:
+#    client-id: p-config-server-30607a4f-abbb-4c88-a210-09e656b32850
+#    client-secret: ib5lqJIQSqiS
+#    access-token-uri: https://p-spring-cloud-services.uaa.run.pivotal.io/oauth/token
+#    clientId: p-config-server-30607a4f-abbb-4c88-a210-09e656b32850
+#    clientSecret: ib5lqJIQSqiS
+#    accessTokenUri: https://p-spring-cloud-services.uaa.run.pivotal.io/oauth/token
 
 #spring:
 #  profiles:
